contact notable spacing fix

--- a/src/components/alumnicommitee/AlumniCommitee.css
+++ b/src/components/alumnicommitee/AlumniCommitee.css
@@ -25,7 +25,7 @@
     justify-content: center;
     align-items: center;
     /* justify-content: space-between; */
-    padding-top: 50px;
+    /* padding-top: 50px; */
     gap: 20px;
 }
 .uppercase{
